force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <label>Payment_Transaction</label>
    <nameField>
        <label>Payment_Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment_Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>