force-app/main/default/objects/Payment_Transaction__c/fields/Linked_Original_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Linked_Original_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked_Original_Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Payment_Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>