force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment_Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARD</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>NET_BANKING</fullName>
            </value>
            <value>
                <fullName>WALLET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>