force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <label>Payment_Transaction</label>
    <type>DateTime</type>
</CustomField>