force-app/main/default/objects/Payment_Transaction__c/fields/Raw_Stripe_Response__c.field-meta.xml
<CustomField>
    <fullName>Raw_Stripe_Response__c</fullName>
    <label>Raw_Stripe_Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>