force-app/main/default/objects/Payment_Transaction__c/fields/Related_Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Related_Refund_Reason__c</fullName>
    <label>Related_Refund_Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Item Missing</fullName>
            </value>
            <value>
                <fullName>Quality Issue</fullName>
            </value>
            <value>
                <fullName>Quantity Issue</fullName>
            </value>
            <value>
                <fullName>Package Damaged</fullName>
            </value>
            <value>
                <fullName>Late Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>