force-app/main/default/objects/Payment_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INITIATED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>REVERSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>