force-app/main/default/objects/Payment_Transaction__c/fields/Stripe_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Session_Id__c</fullName>
    <label>Stripe_Session_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>