force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PAYMENT</fullName>
            </value>
            <value>
                <fullName>REFUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>